syntax = "proto3";

package job;


message Job {
  string id = 1;
  string title = 2;
  string description = 3;

}



message GetJobRequest {
  string job_id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message SearchJobsRequest {
  string query = 1;
}

message SearchJobsResponse {
  repeated Job jobs = 1;
}

message CreateJobRequest {
  string job_id = 1;
  string title = 2;
  string description = 3;
}

message CreateJobResponse {
  Job job = 1;
}

service JobService {
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc SearchJobs(SearchJobsRequest) returns (SearchJobsResponse);
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
}
